 - Using weapon sound effect (if exists) when using it to attack;
 - Fixed Save Files to save Character Experience points (forgot!);
 - Fixed a bug of lost object when trying to equip a weapon by "using it" 
   when already have another weapon eqquiped;
 - Fixed a bug on DNT installation of bin directory and default options file;
 - Fixed a bug when sound effect file doesn't exist;

Working on:
 - Weather effects;
 - Shadows;
 - Use dntMapEditor to insert sound effects at maps;
 - New models;
 - New effects for comic books;
 - Capacity of using talents;
 - Implement 5-15% of the talents defined on DNT Book;
 - Map keyboard at options;

Pending:
 - Define Counter Skills;
 - Minimap Tags;
 - Extend walls to follow map height;
 - Define paths to improve the A* at outdoor maps;
 - Put Lights on MapEditor;
 - Score at Death Screen;

================================================
|               Version 0.3.2                  |
================================================
 - Fixed a bug on saveWindow when saving over an existent save file;
 - Fixed a bug on script's interpreter of "else if" jumps;
 - Fixed a bug that keeps dead characters alive after save file load;
 - Fixed mouse 3d world projection outside the indoor map limits;
 - Fixed the text input on saveWindow (was too slow);
 - Fixed a bug of losing the equipped weapon after loading save file;
 - Fixed for Santa model completly finish the die animation;
 - Fixed to update health bar after load save file;
 - Showing "Mission Failure!" at 3D messages (not only on briefing) 
   when fail to complete a mission.

================================================
|               Version 0.3.1                  |
================================================
 - Running Animation/Action/Option for Playable Characters;
 - Anisotropic Texture Filtering;

================================================
|                Version 0.3                   |
================================================